# Graph-VQVAE

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
g_vqvae/data/: dataset.py  explore_data.ipynb
g_vqvae/model/: explore_train.ipynb  g_vqvae.py
g_vqvae/model/graph/: decoder.py  encoder.py  graph_attention.py  graph_vq.py  graph_vqvae.py
g_vqvae/model/image/: vqvae.py
g_vqvae/training/: train.py
g_vqvae/utils/: graph_viz.py
tests/: conftest.py  test_vqvae.py
tests/test_model/: test_graph_attention.py  test_graph_vq.py  test_gvqvae.py  test_vq.py  test_vqvae.py
tests/test_model/test_graph/: test_decoder.py  test_encoder.py  test_graph_vq.py  test_graph_vqvae.py
tests/test_model/test_image/: test_vq.py  test_vqvae.py
vqvae/: vqvae.py
vqvae/data/: dataset.py  explore_data.ipynb
vqvae/model/: g_vqvae.py  gnn.py  graph_vq.py  vq.py  vqvae.py
