[project]
name = "Graph-VQVAE"
authors = [
  { name = "Florian Wiesner", email = "wiesnerflorian94@gmail.com" },
]
version = "0.2.0"
description = "Vector Quantized Variational Autoencoder for Graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["g_vqvae"]
